--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   </div>
 
   <script>
-    const GAS_URL = "https://script.google.com/a/macros/mail.elsh.chc.edu.tw/s/AKfycbw4J2llg9-Z4EFafz5ZfMbgkKDo1asCdfK9ueQW2LKARSQXEPbHHZmbVZak_zRwYT_O/exec"; // 替換成你的 Web App URL
-
+    const GAS_URL = "https://script.google.com/macros/s/AKfycbxxDeg7pAOAuBHz0murM56fb_FxUMjDQ5Iv49RvLq9jhyyMdH9fqdgRl4sylGxIJZrE/exec"; // 替換成你的 Web App URL
     document.getElementById("submitButton").addEventListener("click", async () => {
       const input = document.getElementById("letterInput").value.trim();
       const responseMessage = document.getElementById("responseMessage");
